Website/styles.css
:root {
  color-scheme: dark;
}

* {
  box-sizing: border-box;
}

body {
  padding: 0;
  margin: 0;
  min-width: 100vw;
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  color: var(--neutral-foreground-rest);
  background-color: #12161e;
}

.hidden {
  display: none !important;
}

.row {
  display: flex;
  flex-direction: row;
}

.col {
  display: flex;
  flex-direction: column;
}

.content {
  max-width: 1000px;
  width: 100%;
  margin: 0 auto;
}

.align-items-center {
  align-items: center;
}

.justify-content-between {
  justify-content: space-between;
}

.justify-content-end {
  justify-content: flex-end;
}

h1 {
  margin-bottom: 0.5rem;
}

.caption1 {
  font-size: 1rem;
  color: var(--neutral-foreground-hover);
}

.caption2 {
  font-size: 0.8rem;
  margin-top: 0.25rem;
  color: var(--neutral-foreground-rest);
}

.packages {
  margin: 0.5rem 0 1rem 0;
  max-width: 90%;
  padding: 0.25rem;
  display: flex;
  flex: 1;
}

#packageGrid {
  overflow-y: auto;
  width: 100%;
  max-height: 40rem;
}

.packages .packageName {
  font-size: 1.1rem;
  font-weight: 600;
  margin: 0.25rem 0;
}

.searchBlock {
  margin-top: 1rem;
  width: 100%;
  max-width: 90%;
}

.searchBlock .root {
  width: 100%;
}

#searchInput {
  width: 100%;
}

.vccUrlField {
  min-width: 450px;
  max-width: 90%;
  flex-grow:1;
}

#addListingToVccHelp {
  z-index: 11;
}

#packageInfoModal {
  z-index: 10;
}

#rowMoreMenu {
  top: 0;
  left: 0;
  position: absolute;
  z-index: 10;
}

#rowMoreMenu a {
  display: block;
  text-decoration: none;
  color: var(--neutral-foreground-rest);
}

.bannerImage {
  aspect-ratio: 5 / 1;
  border-radius: 6px;
  max-width: 90%;
  width: 100%;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-image: url(banner.svg) !important;
  margin-bottom: 0.25rem;
}

.badge {
  border-radius: 4px;
  padding: 0.25rem 0.5rem;
  background-color: var(--neutral-fill-hover);
}

.m-0 {
  margin: 0;
}

.m-1 {
  margin: 0.25rem;
}

.m-2 {
  margin: 0.5rem;
}

.m-3 {
  margin: 0.75rem;
}

.m-4 {
  margin: 1rem;
}

.m-5 {
  margin: 2rem;
}

.mt-1 {
  margin-top: 0.25rem;
}

.mt-2 {
  margin-top: 0.5rem;
}

.mt-3 {
  margin-top: 0.75rem;
}

.mt-4 {
  margin-top: 1rem;
}

.mt-5 {
  margin-top: 2rem;
}

.mb-1 {
  margin-bottom: 0.25rem;
}

.mb-2 {
  margin-bottom: 0.5rem;
}

.mb-3 {
  margin-bottom: 0.75rem;
}

.mb-4 {
  margin-bottom: 1rem;
}

.mb-5 {
  margin-bottom: 2rem;
}

.ms-1 {
  margin-left: 0.25rem;
}

.ms-2 {
  margin-left: 0.5rem;
}

.ms-3 {
  margin-left: 0.75rem;
}

.ms-4 {
  margin-left: 1rem;
}

.ms-5 {
  margin-left: 2rem;
}

.me-1 {
  margin-right: 0.25rem;
}

.me-2 {
  margin-right: 0.5rem;
}

.me-3 {
  margin-right: 0.75rem;
}

.me-4 {
  margin-right: 1rem;
}

.me-5 {
  margin-right: 2rem;
}

.p-1 {
  padding: 0.25rem;
}

.p-2 {
  padding: 0.5rem;
}

.p-3 {
  padding: 0.75rem;
}

.p-4 {
  padding: 1rem;
}

.p-5 {
  padding: 2rem;
}

.pt-1 {
  padding-top: 0.25rem;
}

.pt-2 {
  padding-top: 0.5rem;
}

.pt-3 {
  padding-top: 0.75rem;
}

.pt-4 {
  padding-top: 1rem;
}

.pt-5 {
  padding-top: 2rem;
}

.pb-1 {
  padding-bottom: 0.25rem;
}

.pb-2 {
  padding-bottom: 0.5rem;
}

.pb-3 {
  padding-bottom: 0.75rem;
}

.pb-4 {
  padding-bottom: 1rem;
}

.pb-5 {
  padding-bottom: 2rem;
}

.ps-1 {
  padding-left: 0.25rem;
}

.ps-2 {
  padding-left: 0.5rem;
}

.ps-3 {
  padding-left: 0.75rem;
}

.ps-4 {
  padding-left: 1rem;
}

.ps-5 {
  padding-left: 2rem;
}

.pe-1 {
  padding-right: 0.25rem;
}

.pe-2 {
  padding-right: 0.5rem;
}

.pe-3 {
  padding-right: 0.75rem;
}

.pe-4 {
  padding-right: 1rem;
}

.pe-5 {
  padding-right: 2rem;
}

.w-100 {
  width: 100%;
}

.flex-1 {
  flex: 1;
}

